Bug #13171: Fix spacing on editor's comments in carousel

--- a/static/4/css/lights-on.css
+++ b/static/4/css/lights-on.css
@@ -1201,7 +1201,7 @@ padding-top: 20px;
 	}
 
 .inner_slider .item_details .description > div {
-    height: 97px;
+    height: 7.8em;
     overflow: hidden;
 }
 .inner_slider .item_details .description *{
